# COVID19NPISecondWave

./: .gitignore  .zenodo.json  README.md  active_CMs.ipynb  pyproject.toml
data/: README.md  all_merged_data.csv  all_merged_data_2021-01-09.csv  all_merged_data_2021-01-20.csv  all_merged_data_2021-01-22.csv  alt_all_merged_data.csv  alt_all_merged_data_2021-01-22.csv  nuts3_new_variant_fraction.csv
data/npi_data/: Austria.xlsx  England.xlsx  Germany.xlsx  Italy.xlsx  Netherlands.xlsx  Switzerland.xlsx  austria.csv  czech.csv  czech.xlsx  england.csv  germany.csv  italy.csv  netherlands.csv  switzerland.csv  third_wave_NPI_data.csv
data/raw_data_w_sources/: at_case_deaths.csv  at_lau_lookup.csv  ch_canton_lookup.json  cz_cases_deaths.csv  it_cases_deaths.csv  sources.md  uk_ltla_info.json
data/synthetic_data/: synth_data_small.csv  synth_data_small_simple.csv
epimodel/: __init__.py  epiparam.py  preprocessing.py  script_utils.py
epimodel/distributions/: __init__.py  asymmetric_laplace.py
epimodel/models/: __init__.py  candidate_alt.py  candidate_model.py  (+32 more)
notebooks/: README.MD  eda_bins.ipynb  exploratory_data_analysis.ipynb  feature_selection_plots.ipynb  first_library_pass.ipynb  fw_alpha.txt  main_result_plotter-keep_both.ipynb  main_result_plotter.ipynb  pass_small-randwalk.ipynb  pass_small.ipynb  uk_jbc_complex.ipynb  uk_jbc_pass-first_pass.ipynb  uk_test_set.pkl  validation_plotter_drop_outdoors.ipynb  validation_plotter_keep_both.ipynb
scripts/: model_local_search.py  model_mvp_exps.py  pre-commit.sh  run_model_mvp_exps.sh  sensitivity_dispatcher.py
(+105 files in other folders)
