[tool.poetry]
name = "covid19npisecondwave"
version = "0.1.0"
description = "Second wave NPI effectiveness estimates"
authors = ["Mrinank Sharma <mrinank.sharma.97+dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
arviz = "^0.10.0"
numpyro = "^0.4.1"
numpy = "^1.19.4"
pandas = "^1.1.4"
seaborn = "^0.11.0"
jupyterlab = "^2.2.9"
appnope = "^0.1.2"
tfp-nightly = "^0.12.0-alpha.20201208"
pymc3 = "^3.10.0"
tqdm = "^4.56.0"
black = "^20.8b1"
nbstripout = "^0.3.9"
pyyaml = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
